<resources>
    <string name="app_name">BottomNavigationView</string>
    <string name="title_home">首頁</string>
    <string name="title_power">BEMS設備清單</string>
    <string name="title_control">電器控制</string>
    <string name="title_user">用電資訊</string>
    <string name="title_dr">節電行動</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>