<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/homepage"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_power"
        android:icon="@drawable/solar"
        android:title="@string/title_power" />

    <item
        android:id="@+id/navigation_control"
        android:icon="@drawable/gear"
        android:title="@string/title_control" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/save"
        android:title="@string/title_user" />


    <item
        android:id="@+id/navigation_dr"
        android:icon="@drawable/dr_select"
        android:title="@string/title_dr" />

</menu>
